# introduction

./: CPU_specifications.docx  Project1.vcxproj  add_charts_to_excel.py
Source/: specification.md
Source/mxv/1d_array/: CMakeLists.txt  mxv_1d.cpp
Source/sp/: sp.cpp
code/: CMakeLists.txt  Source.cpp  mxm_script.py  mxv_script.py  source.py  sp_script.py  vector_matrix_mult.cpp.txt
code/mxm/: CMakeLists.txt  mxm.cpp
code/mxv/: CMakeLists.txt
code/sp/: CMakeLists.txt  sp.cpp
codeandresults/: source.py
codeandresults/mxm/2d_array/: CMakeLists.txt  mxm_2d.cpp
codeandresults/mxv/: mxv.cpp
codeandresults/mxv/2d_array/: CMakeLists.txt  mxv_2d.cpp
codeandresults/results/: .~lock.mxv_results (1).xlsx#
codeandresults/sp/: CMakeLists.txt  sp.cpp
results/: mxm_results.xlsx  mxm_results_1.xlsx  mxv_results (1).xlsx  mxv_results_1.xlsx  profile_results.xlsx  sp_bad_results.xlsx  sp_result.csv  sp_results (1).xlsx  sp_results.xlsx
results/first_results/: mxv_result.csv
results/output_files/: mxm_random_1d_to_xlxs.py  mxm_twos_2d_to_xlxs.py  mxm_zeros_1d_to_xlxs.py  mxv_1d_result_random.csv  mxv_random_2d_to_xlxs.py  mxv_zeros_2d_to_xlxs.py  sp_result_twos.xlsx  sp_twos_to_xlxs.py  sp_zeros_to_xlxs.py
results/raw_data/: 1_1_0_40000000.xlsx  1_1_0_41000000.xlsx  1_1_0_42000000.xlsx  1_1_0_43000000.xlsx  1_1_0_44000000.xlsx  1_1_0_45000000.xlsx  1_1_0_46000000.xlsx  1_1_0_47000000.xlsx  1_1_0_48000000.xlsx  1_1_0_49000000.xlsx  1_1_0_50000000.xlsx  1_1_0_51000000.xlsx  1_1_0_52000000.xlsx  1_1_0_53000000.xlsx  1_1_0_54000000.xlsx  1_1_0_55000000.xlsx  1_2_0_40000000.xlsx  1_2_0_41000000.xlsx  1_2_0_42000000.xlsx  1_2_0_43000000.xlsx  1_2_0_44000000.xlsx  1_2_0_45000000.xlsx  1_2_0_46000000.xlsx  1_2_0_47000000.xlsx  1_2_0_48000000.xlsx  1_2_0_49000000.xlsx  1_2_0_50000000.xlsx  (+293 more)
sp/: sp.cpp
src/: add_charts_to_excel.py  benchmark.py  runtests.py
(+113 files in other folders)
